# EPML-ITMO

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  QUICK_START.md  README.md  REPORT.md  REPORT_HW4.md  REPORT_HW5.md  REPORT_HW6.md  REPORT_hw1.md  REPORT_hw2.md  REPORT_hw2_versioning.md  REPORT_hw3.md  REPRODUCIBILITY.md  docker-compose.yml  dvc.yaml  dvc.yaml.bak  metrics.json  mkdocs.yml  params.yaml  pyproject.toml  requirements.txt  ВОСПРОИЗВОДИМОСТЬ.md
.dvc/: config
.github/workflows/: ci.yml  docs.yml
clearml/config/: clearml.conf  docker-compose-clearml.yml  scheduler_config.json
clearml/experiments/: clearml_dashboard.py  experiment_comparison.py  experiment_runner.py
clearml/models/: model_manager.py
clearml/pipelines/: ml_pipeline.py  pipeline_monitor.py  pipeline_scheduler.py  run_system.py
config/: monitoring.py  pipeline_config.py  simple_composer.py
data/processed/: processing_metadata.yaml.dvc  publications_processed.csv.dvc
data/raw/: arxiv_metadata.yaml.dvc  arxiv_publications.csv.dvc
docs/: index.md
docs/api/: decorators.md  features.md  index.md  mlflow-utils.md
docs/deployment/: clearml.md  docker.md  dvc.md  mlflow.md
docs/getting-started/: configuration.md  installation.md  quickstart.md
docs/reports/: experiments.md  metrics.md
docs/stylesheets/: extra.css
docs/user-guide/: data.md  experiments.md  overview.md  training.md
experiments/LR_baseline/: model.pkl  model_metadata.yaml
experiments/LR_extended_ngrams/: metrics.json  model.pkl  model_metadata.yaml
experiments/LR_high_reg/: metrics.json  model.pkl
experiments/LR_l1_penalty/: model.pkl  model_metadata.yaml
experiments/LR_lbfgs/: model.pkl  model_metadata.yaml
experiments/LR_low_reg/: metrics.json  model.pkl  model_metadata.yaml
experiments/RF_baseline/: model.pkl  model_metadata.yaml
experiments/RF_conservative/: metrics.json  model.pkl  model_metadata.yaml
experiments/RF_deeper/: model.pkl
experiments/RF_more_features/: model.pkl  model_metadata.yaml
experiments/RF_more_trees/: model.pkl
experiments/RF_unigrams_only/: model.pkl
experiments/SVM_baseline/: metrics.json  model.pkl  model_metadata.yaml
experiments/SVM_high_C/: model.pkl
experiments/SVM_linear/: metrics.json  model.pkl  model_metadata.yaml
experiments/SVM_low_C/: model.pkl  model_metadata.yaml
experiments/SVM_poly/: model.pkl  model_metadata.yaml
mlruns/0/: meta.yaml
mlruns/317899650776771811/: meta.yaml
mlruns/317899650776771811/03eeb1ea8a70444382afee7fef282806/: meta.yaml
mlruns/317899650776771811/08480be02f2e475fb0faccaaf345907c/: meta.yaml
mlruns/317899650776771811/13e3909ad4cf402caf6ab7c7f0dcd06d/: meta.yaml
mlruns/317899650776771811/15864627485f496b8d3a8028ac09b3b1/: meta.yaml
mlruns/317899650776771811/1e95e77f0997446882722500c15423d1/: meta.yaml
mlruns/317899650776771811/1ec881360f3249d39ced3ef562975a16/: meta.yaml
mlruns/317899650776771811/2bc26796f14144009fa54af5936114ee/: meta.yaml
mlruns/317899650776771811/3ff55992cf87451cb6e1729123e2d8c5/: meta.yaml
mlruns/317899650776771811/51c0eb01144b4c5cb8899facb6f8ee0c/: meta.yaml
mlruns/317899650776771811/5539c61dcc6547d3845ce260d4685abc/: meta.yaml
mlruns/317899650776771811/55d2df9ebd2d4eb6980c2b9a2a7f71d7/: meta.yaml
mlruns/317899650776771811/574827aa768b4f1797571e62b841137d/: meta.yaml
mlruns/317899650776771811/5b43cf5f9ef546e8ab12dcd1bde2fbad/: meta.yaml
mlruns/317899650776771811/5d527d40fabe47d0ab9367739fcb020e/: meta.yaml
mlruns/317899650776771811/61e2312baeb64c4eb0b74c5042999140/: meta.yaml
mlruns/317899650776771811/6ac2e4550cf840089ced18863160467e/: meta.yaml
mlruns/317899650776771811/6d1e4ed1cfa349c1a5b451979589c618/: meta.yaml
mlruns/317899650776771811/6db49486198b4acaaf08e07a681f628e/: meta.yaml
mlruns/317899650776771811/81a100e412244129b43d36a02696d64a/: meta.yaml
mlruns/317899650776771811/8373b97ae56e4ebf9ad61fb41fe645f5/: meta.yaml
mlruns/317899650776771811/83f9884e8813425f8659b4c50f0e5313/: meta.yaml
mlruns/317899650776771811/8751bd4496b4425fbae86d1d6502db4a/: meta.yaml
mlruns/317899650776771811/89cf4e1188a448ccb5120b5deed6c246/: meta.yaml
mlruns/317899650776771811/8e0689e339d24988862b36062f7a4e63/: meta.yaml
mlruns/317899650776771811/9691408d124b4531be296e2e7554767d/: meta.yaml
mlruns/317899650776771811/97630758daff4e4390751d89de2edd0a/: meta.yaml
mlruns/317899650776771811/9e92eefe43394c9f9eddc4789ebca4b3/: meta.yaml
mlruns/317899650776771811/b52eb96525a14d90908ee5c684f0523f/: meta.yaml
mlruns/317899650776771811/b5add9231d624365a39a29e9d96598e5/: meta.yaml
mlruns/317899650776771811/b7501a4c2a464b3eab5e036215e20366/: meta.yaml
mlruns/317899650776771811/cd104fea83e945d58e599d58458f1595/: meta.yaml
mlruns/317899650776771811/d79b2ccc99c84a45aaba3faa63150dc3/: meta.yaml
mlruns/317899650776771811/e08943719d924a8683eb98e20c14e2d0/: meta.yaml
mlruns/317899650776771811/ee99a399aaf84d369c6f15f40c7d326e/: meta.yaml
mlruns/317899650776771811/f1f95772d9654340a07538c8f7988653/: meta.yaml
mlruns/317899650776771811/f73438997625485fa866d73e29fd8be5/: meta.yaml
mlruns/513200582704195422/: meta.yaml
mlruns/513200582704195422/036b9d0a80bd49d8a72c71af9d455b8e/: meta.yaml
mlruns/513200582704195422/1ac2556b8ad147d2b7b40e43215eb596/: meta.yaml
mlruns/513200582704195422/1d86059c751944fe9ac4bdd1bf8ccdf1/: meta.yaml
mlruns/513200582704195422/21a76dbb6c5144ed97ef3297648ad2d1/: meta.yaml
mlruns/513200582704195422/3e0b59a18e4d4d2386a2e214affc35bd/: meta.yaml
mlruns/513200582704195422/4a3cc7f371574bbab42c74862aa67162/: meta.yaml
mlruns/513200582704195422/50cb32f36b364118b82ee6e84f30d54c/: meta.yaml
models/: .gitignore  classifier.pkl  classifier.pkl.dvc
reports/: pipeline_execution_report.yaml
researchhub/: __init__.py  dataset.py  decorators.py  features.py  main.py  mlflow_utils.py  plots.py
researchhub/modeling/: predict.py  train.py
scripts/: automated_pipeline.py  fetch_arxiv_data.py  generate_reports.py  preprocess_data.py  run_experiments.py  train_model.py
(+504 files in other folders)
