# Modern pyproject.toml following PEP 621 standard

[project]
name = "research-agents-hub"
version = "0.1.0"
description = "Research Agents Hub - ML pipeline for publication analysis"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = ["machine-learning", "research", "publications", "dvc", "mlflow"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

# Dependencies are managed by Poetry
dependencies = [
    "pandas>=2.3.3,<3.0.0",
    "numpy>=2.3.5,<3.0.0",
    "scikit-learn>=1.7.2,<2.0.0",
    "dvc[s3]>=3.0.0,<4.0.0",
    "mlflow>=2.8.0,<3.0.0",
    "boto3>=1.34.0,<2.0.0",
    "arxiv (>=2.3.1,<3.0.0)",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "bandit>=1.7.8",
    "pre-commit>=3.7.1",
]

[tool.poetry]
packages = [{include = "researchhub"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.3.3"
numpy = "^2.3.5"
scikit-learn = "^1.7.2"
dvc = {extras = ["s3"], version = "^3.0.0"}
mlflow = "^2.8.0"
boto3 = "^1.34.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
mypy = "^1.10.0"
bandit = "^1.7.8"
pre-commit = "^3.7.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["researchhub"]

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort (сортировка импортов)
    "B",  # flake8-bugbear (поиск багов)
]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["researchhub"]  # Чтобы твои модули отделялись от внешних библиотек

# MyPy configuration
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false

# Bandit configuration
[tool.bandit]
exclude_dirs = ["tests", "notebooks"]
