[project]
name = "research-agents-hub"
version = "0.1.0"
description = "ML pipeline for ArXiv research publication analysis with DVC and MLflow"
authors = [
    {name = "Research Team", email = "research@example.com"}
]
readme = "README.md"
requires-python = ">=3.11"
keywords = ["machine-learning", "research", "publications", "dvc", "mlflow", "arxiv"]


dependencies = [
    "pandas>=2.3.3,<3.0.0",
    "numpy>=2.3.5,<3.0.0",
    "scikit-learn>=1.7.2,<2.0.0",
    "dvc>=3.0.0,<4.0.0",
    "mlflow>=2.8.0,<3.0.0",
    "pyyaml>=6.0.0,<7.0.0",
    "requests>=2.31.0,<3.0.0",
    "defusedxml>=0.7.0,<1.0.0",
    "pydantic (>=2.12.5,<3.0.0)",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.4",
    "mypy>=1.10.0",
    "bandit>=1.7.8",
    "pre-commit>=3.7.1",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "types-PyYAML>=6.0.12.20250915",
]

[project.urls]
Homepage = "https://github.com/your-org/research-agents-hub"
Repository = "https://github.com/your-org/research-agents-hub.git"
Issues = "https://github.com/your-org/research-agents-hub/issues"

# Poetry-specific configuration
[tool.poetry]
packages = [{include = "researchhub"}]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

# Ruff configuration for code formatting and linting
[tool.ruff]
line-length = 88
target-version = "py311"
src = ["researchhub", "scripts"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line too long, handled by black/formatter
]

[tool.ruff.lint.isort]
known-first-party = ["researchhub"]
force-single-line = false

# MyPy configuration for type checking
[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false

# Bandit configuration for security linting
[tool.bandit]
exclude_dirs = ["tests", "notebooks", "experiments"]
skips = ["B101"]  # Skip assert_used test

# Pytest configuration
[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--cov=researchhub",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml",
    "--strict-markers",
    "-v",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
    "unit: marks tests as unit tests",
]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

# Coverage configuration
[tool.coverage.run]
source = ["researchhub"]
omit = [
    "tests/*",
    "*/tests/*",
    "setup.py",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "types-pyyaml (>=6.0.12.20250915,<7.0.0.0)"
]
